# zephyr-rgblights

./: CMakeLists.txt  Kconfig  Makefile  README.md  prj.conf  zephyr-rgblights.code-workspace
docker/: docker-run.sh
manifest/: west.yml
scripts/: gdbstartup
snippets/mcuboot/: mcuboot.conf  snippet.yml
src/: ble.c  led.c  main.c  usb_uart.c
src/ble_services/: ble_rgbled.c  ble_rgbled.h
